force-app/main/default/objects/Village_Presence__c/Village_Presence__c.object-meta.xml
<CustomObject>
    <description>represents a Brand Account in a Village and stores all the properties in the record</description>
    <label>Village Presence</label>
    <nameField>
        <label>Village Presence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Village Presences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>