force-app/main/default/objects/Village_Presence__c/fields/Actions_Planned__c.field-meta.xml
<CustomField>
    <fullName>Actions_Planned__c</fullName>
    <label>Actions Planned</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Matures</fullName>
            </value>
            <value>
                <fullName>Threshold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>