force-app/main/default/objects/Village_Presence__c/fields/Actual_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Exit_Date__c</fullName>
    <inlineHelpText>The date the brand exited the village.</inlineHelpText>
    <label>Actual Exit Date</label>
    <type>Date</type>
</CustomField>