force-app/main/default/objects/Village_Presence__c/fields/Additional_Storage_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Storage_Required__c</fullName>
    <inlineHelpText>Add comments about any additional storage requirements that the brand in the village may have. Include a date in the comment.</inlineHelpText>
    <label>Additional Storage Required</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>