force-app/main/default/objects/Village_Presence__c/fields/Age_of_Shop_Fit_Years__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Shop_Fit_Years__c</fullName>
    <formula>if(Newness_Date__c &lt; TODAY(), (Today() - Newness_Date__c)/365, 0)</formula>
    <label>Age of Shop Fit (Years)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>