force-app/main/default/objects/Village_Presence__c/fields/Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comments__c</fullName>
    <description>Enter any comments for the approval settings.</description>
    <inlineHelpText>Enter any comments for the approval settings.</inlineHelpText>
    <label>Approval Comments</label>
    <type>TextArea</type>
</CustomField>