force-app/main/default/objects/Village_Presence__c/fields/BP_HFS_Active__c.field-meta.xml
<CustomField>
    <fullName>BP_HFS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This fields is used to check if Brand Portal should show HFS Terms and Operational Guides</description>
    <label>HFS Active</label>
    <type>Checkbox</type>
</CustomField>