force-app/main/default/objects/Village_Presence__c/fields/Brand_Event_VP_Only_Active__c.field-meta.xml
<CustomField>
    <fullName>Brand_Event_VP_Only_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Brand Event Village Presence ONLY. Net Sales recorded will also be taken as Brand Event sales. Events of less than two months duration, in a unit or Village private space. Events by invitation only and/or open to the public, either physical or virtual.</inlineHelpText>
    <label>Brand Event Only Village Presence</label>
    <type>Checkbox</type>
</CustomField>