force-app/main/default/objects/Village_Presence__c/fields/Brand_Private_Appointment_Active__c.field-meta.xml
<CustomField>
    <fullName>Brand_Private_Appointment_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When this check box is selected the Daily Sales record will include Brand Private Appointment Sales, Transactions and Unit data fields.  This is sales from private guest appointments organised by the Brands.</inlineHelpText>
    <label>Brand Private Appointment Active</label>
    <type>Checkbox</type>
</CustomField>