force-app/main/default/objects/Village_Presence__c/fields/By_Appointment_Selling__c.field-meta.xml
<CustomField>
    <fullName>By_Appointment_Selling__c</fullName>
    <inlineHelpText>Select if the Brand in village will be engaging with &apos;By Appointment Selling&apos;</inlineHelpText>
    <label>By Appointment Selling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not for Now</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Agreed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>