force-app/main/default/objects/Village_Presence__c/fields/CertSales_Active__c.field-meta.xml
<CustomField>
    <fullName>CertSales_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When CertSales Active is selected then when the next Daily Sales record is created a Sales Certification Batch will also be created</inlineHelpText>
    <label>CertSales Active</label>
    <type>Checkbox</type>
</CustomField>