force-app/main/default/objects/Village_Presence__c/fields/CertSales_CertPeriod_Type__c.field-meta.xml
<CustomField>
    <fullName>CertSales_CertPeriod_Type__c</fullName>
    <inlineHelpText>The Sales Certification Batch period type will either be monthly or quarterly</inlineHelpText>
    <label>Sales Cert Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CertSales_Active__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>