force-app/main/default/objects/Village_Presence__c/fields/Coniq_Days_Review_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Days_Review_Overdue__c</fullName>
    <formula>IF(TODAY() -  Coniq_Next_Review_Date__c &lt;= 0, 0 , TODAY() -  Coniq_Next_Review_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Review Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>