force-app/main/default/objects/Village_Presence__c/fields/Coniq_Days_Since_Last_Review__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Days_Since_Last_Review__c</fullName>
    <formula>TODAY() - Coniq_Last_Review_Date__c</formula>
    <label>Days Since Last Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>