force-app/main/default/objects/Village_Presence__c/fields/Coniq_Days_till_Next_Review__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Days_till_Next_Review__c</fullName>
    <formula>IF(Coniq_Next_Review_Date__c - TODAY() &lt; 0, 0, Coniq_Next_Review_Date__c - TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days till Next Review</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>