force-app/main/default/objects/Village_Presence__c/fields/Coniq_Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Last_Review_Date__c</fullName>
    <label>Last Review Date</label>
    <type>Date</type>
</CustomField>