force-app/main/default/objects/Village_Presence__c/fields/Coniq_No_of_Actual_Scanners__c.field-meta.xml
<CustomField>
    <fullName>Coniq_No_of_Actual_Scanners__c</fullName>
    <label>No. of Actual Scanners</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>