force-app/main/default/objects/Village_Presence__c/fields/Coniq_No_of_Planned_Scanners__c.field-meta.xml
<CustomField>
    <fullName>Coniq_No_of_Planned_Scanners__c</fullName>
    <inlineHelpText>This is the number of scanners the brand has accepted to use</inlineHelpText>
    <label>No. of Planned Scanners</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>