force-app/main/default/objects/Village_Presence__c/fields/Coniq_No_of_Tills__c.field-meta.xml
<CustomField>
    <fullName>Coniq_No_of_Tills__c</fullName>
    <label>No. of Tills</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>