force-app/main/default/objects/Village_Presence__c/fields/Coniq_Review_Alert__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Review_Alert__c</fullName>
    <formula>IF( Coniq_Days_Review_Overdue__c &lt;= 0, 
IMAGE( &quot;/img/msg_icons/confirm16.png&quot;, &quot;OK&quot; ),
IF( AND(Coniq_Days_Review_Overdue__c &gt; 0,Coniq_Days_Review_Overdue__c &lt; 10),
IMAGE(&quot;/img/msg_icons/warning16.png&quot;, &quot;Overdue&quot;),
IMAGE(&quot;/img/msg_icons/error16.png&quot;, &quot;REALLY Overdue&quot;)
))</formula>
    <inlineHelpText>Green = 0 Days Overdue
Amber = 0 &gt; 10 Days Overdue
Red = 10+ Days overdue</inlineHelpText>
    <label>Coniq Review Alert</label>
    <type>Text</type>
</CustomField>