force-app/main/default/objects/Village_Presence__c/fields/Coniq_Scanner_ids__c.field-meta.xml
<CustomField>
    <fullName>Coniq_Scanner_ids__c</fullName>
    <inlineHelpText>Please make a note of each scanner Id separated with a semi-colon</inlineHelpText>
    <label>Scanner Id&apos;s</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>