force-app/main/default/objects/Village_Presence__c/fields/Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expiry_Date__c</fullName>
    <inlineHelpText>When is the current Lease finish</inlineHelpText>
    <label>Contract Expiry Date</label>
    <type>Date</type>
</CustomField>