force-app/main/default/objects/Village_Presence__c/fields/Contract_Tenant_Break_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Tenant_Break_Date__c</fullName>
    <label>Contract Tenant Break Date</label>
    <type>Date</type>
</CustomField>