force-app/main/default/objects/Village_Presence__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Special Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>