force-app/main/default/objects/Village_Presence__c/fields/CSB_Space__c.field-meta.xml
<CustomField>
    <fullName>CSB_Space__c</fullName>
    <inlineHelpText>Enter the space % of the selling area occupied by Current Season Bestsellers</inlineHelpText>
    <label>CSB Space %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>