force-app/main/default/objects/Village_Presence__c/fields/Daily_Sale_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sale_Active_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Specify a future date if the store should not be made active for Daily Sales immediately. Daily Sale records will be created from midday (GMT) of the date specified. If value is left blank, it is assumed the store is immediately active.</description>
    <inlineHelpText>Specify a future date if the store should not be made active for Daily Sales immediately. Daily Sale records will be created from midday (GMT) of the date specified. If value is left blank, it is assumed the store is immediately active.</inlineHelpText>
    <label>Daily Sale Active Date</label>
    <type>Date</type>
</CustomField>