force-app/main/default/objects/Village_Presence__c/fields/Daily_Sale_Email_Reminders__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sale_Email_Reminders__c</fullName>
    <description>Field to indicate whether, by default, this village presence should be automatically sent Daily Sale reminder emails as required.</description>
    <inlineHelpText>Field to indicate whether, by default, this village presence should be automatically sent Daily Sale reminder emails as required.</inlineHelpText>
    <label>Daily Sale Email Reminders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>