force-app/main/default/objects/Village_Presence__c/fields/Daily_Sale_Record_Type_Override__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sale_Record_Type_Override__c</fullName>
    <label>Daily Sale Record Type Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Daily_Sale_Record_Types</valueSetName>
    </valueSet>
</CustomField>