force-app/main/default/objects/Village_Presence__c/fields/Daily_Sales_Active__c.field-meta.xml
<CustomField>
    <fullName>Daily_Sales_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Sales Active</label>
    <type>Checkbox</type>
</CustomField>