force-app/main/default/objects/Village_Presence__c/fields/Deal_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Deal_in_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal in Progress</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Village Presences (Deal in Progress)</relationshipLabel>
    <relationshipName>Village_Presences2</relationshipName>
    <type>Lookup</type>
</CustomField>