force-app/main/default/objects/Village_Presence__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Village Presences (As Distributor)</relationshipLabel>
    <relationshipName>Distributor_Village_Presences</relationshipName>
    <type>Lookup</type>
</CustomField>