force-app/main/default/objects/Village_Presence__c/fields/Email_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing__c</fullName>
    <inlineHelpText>specify if the Brand in the village has given pre-approval for Email Marketing</inlineHelpText>
    <label>Email Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Specified</fullName>
                <default>true</default>
                <label>Not Specified</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>