force-app/main/default/objects/Village_Presence__c/fields/EU_Brand_Captain__c.field-meta.xml
<CustomField>
    <fullName>EU_Brand_Captain__c</fullName>
    <label>EU Brand Captain</label>
    <length>100</length>
    <type>Text</type>
</CustomField>