force-app/main/default/objects/Village_Presence__c/fields/Exit_Deal__c.field-meta.xml
<CustomField>
    <fullName>Exit_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Deal that exiting the Brand from the Village</inlineHelpText>
    <label>Exit Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Village Presences (Exit Deal)</relationshipLabel>
    <relationshipName>Village_Presences1</relationshipName>
    <type>Lookup</type>
</CustomField>