force-app/main/default/objects/Village_Presence__c/fields/Expected_Exit_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Exit_Date__c</fullName>
    <inlineHelpText>The date the Brand is set to exit the village (if termination in progress)</inlineHelpText>
    <label>Expected Exit Date</label>
    <type>Date</type>
</CustomField>