force-app/main/default/objects/Village_Presence__c/fields/Expected_Unit__c.field-meta.xml
<CustomField>
    <fullName>Expected_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Where is the Brand expected to move to</inlineHelpText>
    <label>Expected Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Village Presences (Expected Unit)</relationshipLabel>
    <relationshipName>Expected_Brand_In_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>