force-app/main/default/objects/Village_Presence__c/fields/F_B_Covers_Active__c.field-meta.xml
<CustomField>
    <fullName>F_B_Covers_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When F&amp;B Covers Active is selected the Daily Sales record will include the covers data field and will not include the tax free data fields.</inlineHelpText>
    <label>F &amp; B Covers Active</label>
    <type>Checkbox</type>
</CustomField>