force-app/main/default/objects/Village_Presence__c/fields/Fast_Track_Queuing__c.field-meta.xml
<CustomField>
    <fullName>Fast_Track_Queuing__c</fullName>
    <inlineHelpText>Select if the Brand in village will be engaging in Fast Track Queuing</inlineHelpText>
    <label>Fast Track Queuing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not for Now</fullName>
            </value>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Agreed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>