force-app/main/default/objects/Village_Presence__c/fields/FX_Rate__c.field-meta.xml
<CustomField>
    <fullName>FX_Rate__c</fullName>
    <description>FX Rate derived from Village.</description>
    <formula>Village__r.FX_Rate_to_Group_CCY__c</formula>
    <inlineHelpText>FX Rate derived from Village.</inlineHelpText>
    <label>FX Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>