force-app/main/default/objects/Village_Presence__c/fields/HFS_Bags_Left__c.field-meta.xml
<CustomField>
    <fullName>HFS_Bags_Left__c</fullName>
    <formula>HFS_Bags_Received__c -  HFS_Bags_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>#HFS Bags Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>