force-app/main/default/objects/Village_Presence__c/fields/HFS_Bags_Received__c.field-meta.xml
<CustomField>
    <fullName>HFS_Bags_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <label># HFS Bags Received</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>