force-app/main/default/objects/Village_Presence__c/fields/HFS_Brand_comments__c.field-meta.xml
<CustomField>
    <fullName>HFS_Brand_comments__c</fullName>
    <label>Collection notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>