force-app/main/default/objects/Village_Presence__c/fields/HFS_Threshold__c.field-meta.xml
<CustomField>
    <fullName>HFS_Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>HFS Threshold</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>