force-app/main/default/objects/Village_Presence__c/fields/Ignore_99999_Rule__c.field-meta.xml
<CustomField>
    <fullName>Ignore_99999_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ignore all &quot;Total net Sales + Net value of discounts not greater than 99,999&quot; for this village presence.</inlineHelpText>
    <label>Ignore 99999 Rule</label>
    <type>Checkbox</type>
</CustomField>