force-app/main/default/objects/Village_Presence__c/fields/Impact_Brand_Rational__c.field-meta.xml
<CustomField>
    <fullName>Impact_Brand_Rational__c</fullName>
    <description>Identifies that a brand is an Impact Brand and why</description>
    <inlineHelpText>Identifies that a brand is an Impact Brand and why</inlineHelpText>
    <label>Impact Brand Rational</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Trend</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Newness</fullName>
            </value>
            <value>
                <fullName>Positioning</fullName>
            </value>
            <value>
                <fullName>Millennial</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>