force-app/main/default/objects/Village_Presence__c/fields/Initial_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Opened_Date__c</fullName>
    <inlineHelpText>The Date that the store first started trading in the village</inlineHelpText>
    <label>Initial Opened Date</label>
    <type>Date</type>
</CustomField>