force-app/main/default/objects/Village_Presence__c/fields/Interested_in_Discretionary_Discount__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Discretionary_Discount__c</fullName>
    <inlineHelpText>Is the brand interested to sell 10% of product at 10% discount?</inlineHelpText>
    <label>Interested in Discretionary Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Not For Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>