force-app/main/default/objects/Village_Presence__c/fields/Interested_in_Full_Price__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Full_Price__c</fullName>
    <inlineHelpText>Would the brand like to sell product at full price/0% discount in the Village?</inlineHelpText>
    <label>Interested in Full Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Discussion</fullName>
            </value>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Not For Now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>