force-app/main/default/objects/Village_Presence__c/fields/Is_HFS_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_HFS_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in the HFSDash screen to select the correct VPs</description>
    <inlineHelpText>to Enable view on the HFSDash screen in the TIC</inlineHelpText>
    <label>Is HFS Active</label>
    <type>Checkbox</type>
</CustomField>