force-app/main/default/objects/Village_Presence__c/fields/Last_BCAP_reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_BCAP_reminder_sent__c</fullName>
    <label>Last BCAP reminder sent</label>
    <type>DateTime</type>
</CustomField>