force-app/main/default/objects/Village_Presence__c/fields/Last_Remerchandising_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Remerchandising_Date__c</fullName>
    <label>Last Remerchandising Date</label>
    <type>Date</type>
</CustomField>