force-app/main/default/objects/Village_Presence__c/fields/Latest_Review_Deal__c.field-meta.xml
<CustomField>
    <fullName>Latest_Review_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Remerchandising Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Village Presences</relationshipLabel>
    <relationshipName>Village_Presences_New</relationshipName>
    <type>Lookup</type>
</CustomField>