force-app/main/default/objects/Village_Presence__c/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <externalId>true</externalId>
    <label>Lease ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>