force-app/main/default/objects/Village_Presence__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Permanent inc. break</fullName>
            </value>
            <value>
                <fullName>Permanent exc. break</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>