force-app/main/default/objects/Village_Presence__c/fields/Marketing_Approval_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approval_End_Date__c</fullName>
    <inlineHelpText>Enter the date when the Brand Marketing approval expires</inlineHelpText>
    <label>Marketing Approval End Date</label>
    <type>Date</type>
</CustomField>