force-app/main/default/objects/Village_Presence__c/fields/Marketing_Approval_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Approval_Start_Date__c</fullName>
    <inlineHelpText>Enter the date when the Brand in the village sign off the Marketing approvals</inlineHelpText>
    <label>Marketing Approval Start Date</label>
    <type>Date</type>
</CustomField>