force-app/main/default/objects/Village_Presence__c/fields/Marketing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Village_Presences1</relationshipName>
    <type>Lookup</type>
</CustomField>