force-app/main/default/objects/Village_Presence__c/fields/Matures_to_Standard_On__c.field-meta.xml
<CustomField>
    <fullName>Matures_to_Standard_On__c</fullName>
    <description>Lease terms reach standard terms on this date.</description>
    <inlineHelpText>Lease terms reach standard terms on this date.</inlineHelpText>
    <label>Matures to Standard On</label>
    <type>Date</type>
</CustomField>