force-app/main/default/objects/Village_Presence__c/fields/Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Date__c</fullName>
    <inlineHelpText>When do the lights go out in the current trading unit</inlineHelpText>
    <label>Move Out Date</label>
    <type>Date</type>
</CustomField>