force-app/main/default/objects/Village_Presence__c/fields/My_Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Presence__c</fullName>
    <description>Used for List View (not to be displayed on page layout)

If the current user is either the retail or marketing manager the check box will be true</description>
    <formula>IF ( Retail_Manager__r.Id = $User.Id || Marketing_Manager__r.Id = $User.Id , true, false)</formula>
    <label>My Village Presence</label>
    <type>Checkbox</type>
</CustomField>