force-app/main/default/objects/Village_Presence__c/fields/New_Deal__c.field-meta.xml
<CustomField>
    <fullName>New_Deal__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The initial deal that brought the Brand to the Village</inlineHelpText>
    <label>New Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Village Presences (New Deal)</relationshipLabel>
    <relationshipName>Village_Presences</relationshipName>
    <type>Lookup</type>
</CustomField>