force-app/main/default/objects/Village_Presence__c/fields/Newness_Date__c.field-meta.xml
<CustomField>
    <fullName>Newness_Date__c</fullName>
    <inlineHelpText>When was the store last refreshed/re-fitted</inlineHelpText>
    <label>Last Shop Fit Date</label>
    <type>Date</type>
</CustomField>