force-app/main/default/objects/Village_Presence__c/fields/Other_Villages__c.field-meta.xml
<CustomField>
    <fullName>Other_Villages__c</fullName>
    <formula>Brand__r.Village_Presences__c  - IF(  ISPICKVAL( Status__c , &quot;Trading&quot;) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of other villages where the Brand is present</inlineHelpText>
    <label>Other Villages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>