force-app/main/default/objects/Village_Presence__c/fields/Planned_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Open_Date__c</fullName>
    <inlineHelpText>When is the store expected to open</inlineHelpText>
    <label>Planned Open Date</label>
    <type>Date</type>
</CustomField>