force-app/main/default/objects/Village_Presence__c/fields/Pop_Up_Boutique_Active__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Boutique_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Short-term boutiques of two to twenty-four months’ duration.  Sales recorded as a subset of an existing Village Presence Lease.</inlineHelpText>
    <label>Is Pop-Up Boutique Active</label>
    <type>Checkbox</type>
</CustomField>