force-app/main/default/objects/Village_Presence__c/fields/Pop_Up_Interest_Comment__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Interest_Comment__c</fullName>
    <inlineHelpText>Enter any comments related to the Brand&apos;s interest in having a pop-up in the village</inlineHelpText>
    <label>Pop-Up Interest Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>