force-app/main/default/objects/Village_Presence__c/fields/Pop_Up_VP_Only_Active__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_VP_Only_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Pop-Up Village Presence ONLY. Net Sales recorded will also be taken as Pop-Up sales. Short-term boutiques of two to twenty-four months’ duration</inlineHelpText>
    <label>Pop-Up Only Village Presence</label>
    <type>Checkbox</type>
</CustomField>